# cyclone-dds-ws-bridge

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  config.example.toml  docker-compose.test.yml  helper.c  wrapper.h
.github/workflows/: ci.yml
ddswsclient/: client.go  conn.go  example_test.go  go.mod  protocol.go  protocol_test.go
docs/: implementation-plan.md  protocol.md
examples/: Makefile
examples/protobuf/: buf.gen.yaml  go.mod  main.go
examples/protobuf/proto/: temperature.proto
examples/sensor/: go.mod  main.go
examples/sensor/idl/: SensorData.idl
examples/simple/: go.mod  main.go
examples/simple/idl/: HelloWorld.idl
idl/: interop.idl  sensor.idl
src/: bridge.rs  config.rs  lib.rs  main.rs  protocol.rs  qos.rs
src/dds/: error.rs  mod.rs  participant.rs  qos_handle.rs  reader.rs  sertype.rs  writer.rs
src/ws/: server.rs  session.rs
tests/: fixtures_test.rs  integration_pubsub.rs  protocol_test.rs
tests/client/: Dockerfile  conftest.py  requirements.txt  test_client.py  test_dispose.py  test_multiconn.py  test_pubsub.py  test_qos.py
tests/e2e/: run_e2e_tests.sh
tests/e2e/go/: Dockerfile  e2e_test.go  go.mod
tests/e2e/python/: Dockerfile  bridge_client.py  e2e_test.py
tests/interop/: run_interop_tests.sh
tests/interop/go/: Dockerfile  generate.go  go.mod  go.sum  interop_test.go
tests/interop/go/interop/: interop.go
tests/interop/go/sensor/: sensor.go
tests/interop/python/: Dockerfile  generate_fixtures.py  idl_types.py  requirements.txt  verify_go_fixtures.py
