[package]
name = "cyclone-dds-ws-bridge"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "WebSocket bridge for Cyclone DDS"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
thiserror = "2"

[build-dependencies]
bindgen = "0.71"
cc = "1"
pkg-config = "0.3"
